Activate notification only when the remote input is focused

Previously notification was activated when the notification is clicked. This patch changes this timing of focus change. With this CL, the notification is activated only when the notification's remote input is focused.

Bug: 844310
Bug: b/78604162
Test: manual (notification is not focused just on click, and is focused when the remote input is activated)

Change-Id: I30b91ca5d65b0e1089d63a062bdc9edc82de1f89
Reviewed-on: https://chromium-review.googlesource.com/1080502
Reviewed-by: Eliot Courtney <edcourtney@chromium.org>
Commit-Queue: Yoshiki Iguchi <yoshiki@chromium.org>
Cr-Commit-Position: refs/heads/master@{#568738}
Former-commit-id: b16fa44c5bcc8d48121cc324cb515bfad16ac177