ash/system/message_center/arc/arc_notification_item.h
@@ -18,6 +18,10 @@ class ArcNotificationItem {
     // Invoked when the notification data for this item has changed.
     virtual void OnItemDestroying() = 0;
 
+    // Invoked when the remote input textbox on notification is activated or
+    // deactivated.
+    virtual void OnRemoteInputActivationChanged(bool activated) {}
+
    protected:
     virtual ~Observer() = default;
   };
@@ -48,6 +52,10 @@ class ArcNotificationItem {
   // Called when the user wants to toggle expansio of notification. This is
   // called from ArcNotificationContentView.
   virtual void ToggleExpansion() = 0;
+
+  // Called from ArcNotificationManager when the remote input textbox on
+  // notification is activated or deactivated.
+  virtual void OnRemoteInputActivationChanged(bool activate) = 0;
 
   // Adds an observer.
   virtual void AddObserver(Observer* observer) = 0;
